[gd_scene load_steps=14 format=3 uid="uid://bjjktcnjegl47"]

[ext_resource type="Script" path="res://scripts/player_win.gd" id="1_1xn6l"]
[ext_resource type="Texture2D" uid="uid://c0m8b8uluaoah" path="res://assets/paper UI/Paper/Menu2.png" id="1_p4cls"]
[ext_resource type="FontFile" uid="uid://bfq4w63uob47b" path="res://assets/alagard.ttf" id="2_vkjl0"]
[ext_resource type="Texture2D" uid="uid://ci66aa0snhn45" path="res://assets/32rogues/gems/red.png" id="4_v7073"]
[ext_resource type="Texture2D" uid="uid://bia86h43fmf6r" path="res://assets/32rogues/gems/green.png" id="5_rdwol"]
[ext_resource type="Texture2D" uid="uid://cxldoai10a4l2" path="res://assets/32rogues/gems/blue.png" id="6_ni65l"]
[ext_resource type="Texture2D" uid="uid://bs1dp3g861s56" path="res://assets/32rogues/gems/yellow.png" id="7_5mf45"]
[ext_resource type="Texture2D" uid="uid://dja47v3hj8gr1" path="res://assets/32rogues/pieces/coin_1.png" id="8_2bydy"]
[ext_resource type="Texture2D" uid="uid://dj3pa0fadoeo" path="res://assets/paper UI/Paper/Header2new.png" id="9_0w02h"]
[ext_resource type="Texture2D" uid="uid://dloj8xps4ekve" path="res://assets/paper UI/Paper/Header2newHighlighted.png" id="10_m3301"]
[ext_resource type="Texture2D" uid="uid://i3eeeht3uke4" path="res://assets/32rogues/material/wood.png" id="12_f0ct3"]
[ext_resource type="Texture2D" uid="uid://lqlk1lbr7h6e" path="res://assets/32rogues/material/stone.png" id="13_6acky"]
[ext_resource type="Texture2D" uid="uid://b7k04kdav7ru6" path="res://assets/32rogues/material/iron2.png" id="14_fivss"]

[node name="Player_win" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1xn6l")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
offset_left = -342.0
offset_top = -389.0
offset_right = -272.0
offset_bottom = -306.0
scale = Vector2(10, 10)
texture = ExtResource("1_p4cls")

[node name="YouWon" type="Label" parent="."]
layout_mode = 0
offset_left = -136.0
offset_top = -288.0
offset_right = 136.0
offset_bottom = -228.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vkjl0")
theme_override_font_sizes/font_size = 64
text = "Report"
horizontal_alignment = 1

[node name="Description" type="Label" parent="."]
layout_mode = 0
offset_left = -279.0
offset_top = -217.0
offset_right = 273.0
offset_bottom = -154.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vkjl0")
theme_override_font_sizes/font_size = 32
text = "The barbarian managed to return from the dungeon alive.
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Description2" type="Label" parent="."]
layout_mode = 0
offset_left = -316.0
offset_top = 46.0
offset_right = 314.0
offset_bottom = 301.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vkjl0")
theme_override_font_sizes/font_size = 32
text = "Some say he roamed the seas, chasing tales of lost islands and hidden treasures. He vanished without a trace, leaving only his journals behind. No one knows what he discovered, but his name lives on in the stories of those who sailed with him."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Treasure" type="Label" parent="."]
layout_mode = 0
offset_left = -277.0
offset_top = -146.0
offset_right = 158.0
offset_bottom = -83.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vkjl0")
theme_override_font_sizes/font_size = 32
text = "Treasure found:
"
autowrap_mode = 2

[node name="Gems" type="Node2D" parent="."]
position = Vector2(-525, -99)
scale = Vector2(1.5, 1.5)

[node name="GemsNames" type="GridContainer" parent="Gems"]
offset_left = 195.333
offset_right = 310.333
offset_bottom = 176.0

[node name="RedGem" type="Sprite2D" parent="Gems/GemsNames"]
position = Vector2(0, 1)
texture = ExtResource("4_v7073")

[node name="GreenGem" type="Sprite2D" parent="Gems/GemsNames"]
position = Vector2(0.166992, 18.5)
texture = ExtResource("5_rdwol")

[node name="BlueGem" type="Sprite2D" parent="Gems/GemsNames"]
position = Vector2(0, 40)
texture = ExtResource("6_ni65l")

[node name="YellowGem" type="Sprite2D" parent="Gems/GemsNames"]
position = Vector2(0, 60)
texture = ExtResource("7_5mf45")

[node name="Coins" type="Sprite2D" parent="Gems/GemsNames"]
position = Vector2(0, 81.5)
texture = ExtResource("8_2bydy")

[node name="GemsNumbers" type="GridContainer" parent="Gems"]
offset_left = 208.667
offset_top = -8.66667
offset_right = 253.667
offset_bottom = 82.3333
scale = Vector2(1.1, 1.1)

[node name="RedGemNumber" type="Label" parent="Gems/GemsNumbers"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vkjl0")
text = ": 9999"

[node name="GreenGemNumber" type="Label" parent="Gems/GemsNumbers"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vkjl0")
text = ": 9999"

[node name="BlueGemNumber" type="Label" parent="Gems/GemsNumbers"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vkjl0")
text = ": 9999"

[node name="YellowGemNumber" type="Label" parent="Gems/GemsNumbers"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vkjl0")
text = ": 9999"

[node name="CoinNumber" type="Label" parent="Gems/GemsNumbers"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vkjl0")
text = ": 9999"

[node name="Exit" type="TextureButton" parent="."]
modulate = Color(0.980392, 0.92549, 0.878431, 1)
layout_mode = 0
offset_left = -186.0
offset_top = 308.0
offset_right = -113.0
offset_bottom = 326.0
scale = Vector2(5, 5)
texture_normal = ExtResource("9_0w02h")
texture_hover = ExtResource("10_m3301")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -179.0
offset_top = 335.0
offset_right = 175.0
offset_bottom = 365.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vkjl0")
theme_override_font_sizes/font_size = 32
text = "Pray for their soul"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaterialLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 37.0
offset_top = -141.0
offset_right = 472.0
offset_bottom = -78.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vkjl0")
theme_override_font_sizes/font_size = 32
text = "Material found:
"
autowrap_mode = 2

[node name="Material" type="Node2D" parent="."]
position = Vector2(84, -240)
scale = Vector2(1.1, 1.1)

[node name="Wood" type="Sprite2D" parent="Material"]
position = Vector2(-14.9091, 134)
texture = ExtResource("12_f0ct3")

[node name="WoodLabel" type="Label" parent="Material"]
offset_left = -2.09092
offset_top = 123.0
offset_right = 42.9091
offset_bottom = 146.0
scale = Vector2(1.5, 1.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vkjl0")
text = ": 9999"

[node name="Stone" type="Sprite2D" parent="Material"]
position = Vector2(-16.2545, 171.927)
scale = Vector2(1.2, 1.2)
texture = ExtResource("13_6acky")

[node name="StoneLabel" type="Label" parent="Material"]
offset_left = -3.43624
offset_top = 163.109
offset_right = 41.5636
offset_bottom = 186.109
scale = Vector2(1.5, 1.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vkjl0")
text = ": 9999"

[node name="Iron" type="Sprite2D" parent="Material"]
position = Vector2(-15.7818, 213.309)
scale = Vector2(1.4, 1.4)
texture = ExtResource("14_fivss")

[node name="IronLabel" type="Label" parent="Material"]
offset_left = -2.96382
offset_top = 202.309
offset_right = 42.0362
offset_bottom = 225.309
scale = Vector2(1.5, 1.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vkjl0")
text = ": 9999"

[connection signal="mouse_entered" from="Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
